package data;

/**
 * (Will) Receives machine status updates from coffee controller and distributes them to registered observers.
 * TODO: implement class, including observer pattern.
 */
public class MachineStatusService {
    void receiveStatusUpdate(int machineID, String message) {
        // TODO: forward to observers
    }
}
