package domain;

public enum MachineType {
    BASIC,
    AUTOMATED,
    PROGRAMMABLE
}
