package domain;

public enum Size {
    SMALL,
    MEDIUM,
    LARGE
}
